go back to old ver

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,4 @@
+
 name: CI
 
 on: ["workflow_dispatch", "push", "pull_request"]
@@ -6,7 +7,7 @@ jobs:
   build:
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
         with:
           submodules: true
 
@@ -16,7 +17,6 @@ jobs:
           key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
           restore-keys: |
               ${{ runner.os }}-nuget-
-
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
@@ -27,11 +27,12 @@ jobs:
         with:
           verbosity: Diagnostic
 
-      - uses: softprops/action-gh-release@v2
-      if: github.ref_type == 'tag'
-      with:
-        files: |
-          ./build/*.zip
-          ./build/*.tar.gz
-          ./build/*.nupkg
-          ./build/*.snupkg
+      - uses: softprops/action-gh-release@v1
+        if: github.ref_type == 'tag'
+        with:
+          draft: true
+          files: |
+            ./build/*.zip
+            ./build/*.tar.gz
+            ./build/*.nupkg
+            ./build/*.snupkg
