use "buil" instead

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,20 +29,20 @@ jobs:
 
       - name: Check build directory content
         run: |
-          echo "Listing contents of ./build/ directory:"
-          ls -l ./build/
+          echo "Listing contents of build/ directory:"
+          ls -l build/
 
       - name: Zip each folder in the build directory
         run: |
           zip_files=()  # Initialize an empty array to collect zip file paths
-          echo "Start zipping folders in ./build/"
-          for folder in ./build/*; do
+          echo "Start zipping folders in build/"
+          for folder in build/*; do
             if [ -d "$folder" ]; then
               folder_name=$(basename "$folder")
               echo "Creating zip for folder: $folder_name"
-              zip -r "./build/${folder_name}.zip" "$folder"
-              zip_files+=("./build/${folder_name}.zip")  # Add the generated zip file to the array
-              echo "Created ./build/${folder_name}.zip"
+              zip -r "build/${folder_name}.zip" "$folder"
+              zip_files+=("build/${folder_name}.zip")  # Add the generated zip file to the array
+              echo "Created build/${folder_name}.zip"
             else
               echo "Skipping non-directory item: $folder"
             fi
@@ -51,15 +51,15 @@ jobs:
 
       - name: Create all-artifacts.zip
         run: |
-          if [ -f "./build/all-artifacts.zip" ]; then
+          if [ -f "build/all-artifacts.zip" ]; then
             echo "all-artifacts.zip already exists, deleting it..."
-            rm ./build/all-artifacts.zip
+            rm build/all-artifacts.zip
           fi
           echo "Creating all-artifacts.zip"
-          zip -r ./build/all-artifacts.zip "${zip_files[@]}"  # Use the array of zip files to create the final zip
+          zip -r build/all-artifacts.zip "${zip_files[@]}"  # Use the array of zip files to create the final zip
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
           name: Build-Artifacts
-          path: ./build/all-artifacts.zip
+          path: build/all-artifacts.zip
