--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,6 @@
 name: CI
 
-on:
-  workflow_dispatch:
-  push:
-  pull_request:
-  create:
+on: ["workflow_dispatch", "push", "pull_request"]
 
 jobs:
   build:
@@ -19,8 +15,8 @@ jobs:
           path: ~/.nuget/packages
           key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
           restore-keys: |
-            ${{ runner.os }}-nuget-
-
+              ${{ runner.os }}-nuget-
+      
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
@@ -30,25 +26,3 @@ jobs:
         uses: cake-build/cake-action@v2
         with:
           verbosity: Diagnostic
-
-  release:
-    needs: build
-    if: (github.event_name == 'push' || github.event_name == 'create') && github.ref_type == 'branch'
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Checkout the code
-        uses: actions/checkout@v4
-
-      - name: Extract branch name
-        id: extract_branch
-        run: echo "branch=${GITHUB_REF#refs/heads/}" >> $GITHUB_OUTPUT
-
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v1
-        with:
-          tag_name: ${{ steps.extract_branch.outputs.branch }}
-          name: Release ${{ steps.extract_branch.outputs.branch }}
-          body: |
-            Automated release from branch ${{ steps.extract_branch.outputs.branch }}.
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
